option('WM_LABEL_SIZE', type : 'combo', choices : ['32', '64'], value : '32', description : 'Size of the Integer Datatypes "label" and "uLabel"')
option('WM_ARCH', type : 'string', value : '"linux64"', description : 'Target Architecture')
option('WM_PRECISION_OPTION', type : 'combo', choices : ['DP', 'SP', 'SPDP'], value : 'DP', description : 'Whether to use double precision, single precision or mixed precision. See IEEE 754')
