subdir('DNS')
subdir('acoustic')
subdir('basic')
subdir('combustion')
subdir('compressible')
subdir('discreteMethods')
subdir('electromagnetics')
subdir('financial')
subdir('finiteArea')
subdir('heatTransfer')
subdir('incompressible')
subdir('lagrangian')
subdir('multiphase')
subdir('stressAnalysis')
