subdir('00-dummy')
subdir('00-machine-sizes')
subdir('00-openmp')
subdir('BinSum')
subdir('CircularBuffer')
subdir('Circulator')
subdir('CompactIOList')
subdir('CompactListList')
subdir('DLList')
subdir('DiagTensor')
subdir('Dictionary')
subdir('DirLister')
subdir('Distribution')
subdir('DynamicField')
subdir('DynamicList')
subdir('DynamicList2')
subdir('Enum')
subdir('FieldFields1')
subdir('FieldFields2')
subdir('FixedList')
subdir('FixedList2')
subdir('Function1')
subdir('GAMGAgglomeration')
subdir('HashPtrTable')
subdir('HashSet')
subdir('HashTable1')
subdir('HashTable2')
subdir('HashTable3')
subdir('HashTable4')
subdir('Hashing1')
subdir('Hashing2')
subdir('HashingSpeed')
subdir('IFstream')
subdir('IListStream')
subdir('IOField')
subdir('IOobjectList')
subdir('ISLList')
subdir('IStringStream')
subdir('ITstream')
subdir('IjkField')
subdir('IndirectList')
subdir('IntRange')
subdir('LabelledItem')
subdir('List')
subdir('List2')
subdir('List3')
subdir('ListOps')
subdir('ListOps2')
subdir('Map')
subdir('MathFunctions')
subdir('NamedEnum')
subdir('OCountStream')
subdir('ODE')
subdir('OFstream')
subdir('OListStream')
subdir('OSspecific')
subdir('OStringStream')
subdir('OTstream')
subdir('PDRblockMesh')
subdir('PackedList')
subdir('PackedList1')
subdir('PackedList2')
subdir('PatchEdgeFaceWave')
subdir('PatchFunction1')
subdir('PatchTools')
subdir('PointEdgeWave')
subdir('Polynomial')
subdir('PrecisionAdaptor')
subdir('PtrList')
subdir('PtrListDictionary')
subdir('PtrMap')
subdir('SLList')
subdir('SphericalTensor')
subdir('SphericalTensor2D')
subdir('SubField')
subdir('SymmTensor')
subdir('SymmTensor2D')
subdir('Tensor')
subdir('Tensor2D')
subdir('Tuple2')
subdir('UDictionary')
subdir('UIListStream')
subdir('UIndirectList')
subdir('UList')
subdir('UniformField')
subdir('argList')
subdir('autoPtr')
subdir('barycentric')
subdir('base64')
subdir('bitSet1')
subdir('bitSet2')
subdir('bitops')
subdir('boolVector')
subdir('boundBox')
subdir('boundBox2')
subdir('callback')
subdir('cellModels')
subdir('charList')
subdir('checkDecomposePar')
subdir('clock')
subdir('codeStream')
subdir('colourTables')
subdir('complex')
subdir('constantFields')
subdir('contiguous')
subdir('copyFile')
subdir('cplusplus1')
subdir('cpuInfo')
subdir('cstring')
subdir('cyclic')
subdir('decomposedBlockData')
subdir('delete')
subdir('dictionary')
subdir('dictionary2')
subdir('dictionary3')
subdir('dictionary4')
subdir('dictionaryCopy')
subdir('dictionaryTokens')
subdir('dimField')
subdir('dimensionSet')
subdir('dimensionedType')
subdir('dynamicIndexedOctree')
subdir('dynamicLibrary')
subdir('edges')
subdir('ensightFile')
subdir('error')
subdir('etcFiles')
subdir('exprEntry')
subdir('exprTraits')
subdir('extendedStencil')
subdir('externalFileCoupler')
subdir('faceHashing')
subdir('faces')
subdir('fft')
subdir('field1')
subdir('fieldDependency')
subdir('fieldMapping')
subdir('fieldTypes')
subdir('fileName')
subdir('fileNameClean')
subdir('fileNameOS')
subdir('fileOperation1')
subdir('findCell-octree')
subdir('findSphereFeatureEdges-octree')
subdir('findTimes')
subdir('flatOutput1')
subdir('foamCellZoneToVTK')
subdir('foamEnv')
subdir('foamMeshToTet-vtk')
subdir('foamToEnsight-check')
subdir('foamToMetisGraph')
subdir('foamVersion')
subdir('fstreamPointer')
subdir('fvSolutionCombine')
subdir('fvc')
subdir('fvc2D')
subdir('gatherValues1')
subdir('globalIndex')
subdir('globalMeshData')
subdir('graph')
subdir('graphXi')
subdir('hashedWordList')
subdir('hexRef8')
subdir('instant')
subdir('io')
subdir('leastSquareGrad')
subdir('limits')
subdir('liquid')
subdir('mapDistributePolyMesh')
subdir('mappedPatch')
subdir('matrices')
subdir('maxMem')
subdir('memInfo')
subdir('mesh')
subdir('minMax1')
subdir('minMax2')
subdir('mkdir')
subdir('momentOfInertia')
subdir('multiDimPolyFitter')
subdir('mvBak')
subdir('namedDictionary')
subdir('nullObject')
subdir('objectRegistry')
subdir('objectRegistry2')
subdir('pTraits')
subdir('parallel')
subdir('parallel-broadcast')
subdir('parallel-chunks')
subdir('parallel-comm0')
subdir('parallel-comm1')
subdir('parallel-comm2')
subdir('parallel-external-init')
subdir('parallelOverset')
subdir('passiveParticle')
subdir('patchRegion')
subdir('plotFunction1')
subdir('pointField')
subdir('polynomialEqns')
subdir('predicates')
subdir('prefixOSstream')
subdir('primitivePatch')
subdir('primitives')
subdir('processorTopology')
subdir('quaternion')
subdir('rawIOField')
subdir('readDir')
subdir('reconstruct')
subdir('reconstructedDistanceFunction')
subdir('refPtr')
subdir('regex1')
subdir('rigidBodyDynamics')
subdir('router')
subdir('scalarOps')
subdir('scalarPredicates')
subdir('scalarRanges')
subdir('searchableSphere')
subdir('sha1')
subdir('sigFpe')
subdir('simpleMatrix')
subdir('sizeof')
subdir('sliceRange')
subdir('slicedField')
subdir('sort')
subdir('speed')
subdir('spline')
subdir('splitFunctionArgs')
subdir('string')
subdir('string2')
subdir('stringList')
subdir('stringSplit')
subdir('surfaceIntersection')
subdir('surfaceMeshConvert')
subdir('surfaceReading')
subdir('surfaceTree')
subdir('surfaceWriter')
subdir('syncTools')
subdir('sysInfo')
subdir('tensor2D')
subdir('tensorFields1')
subdir('testFunctionObjects')
subdir('tetTetOverlap')
subdir('thermoMixture')
subdir('timeSelector')
subdir('tmp')
subdir('token')
subdir('tokenize')
subdir('treeComms')
subdir('triTet')
subdir('triangleIntersection')
subdir('unitConversion')
subdir('vector')
subdir('vectorTools')
subdir('volField')
subdir('volPointInterpolation')
subdir('vtkSeriesWriter')
subdir('vtmWriter')
subdir('wallDist')
subdir('wallDistDyM')
subdir('wmake1')
subdir('wordRe')
subdir('write-wrapped-string')
subdir('zoneDistribute')
